animation has been Added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </style>
 
 <body>
-        <div class=" w-full bg-black">
-                <div class="grid grid-cols-8 grid-rows-20 w-screen">
+        <div class=" w-full bg-black  overflow-hidden">
+                <div class="grid grid-cols-8 grid-rows-20 w-screen overflow-hidden">
                         <div class="aspect-square" style="--r: 1; --c: 3;"><img src="./assets/1.jpg" alt="Image 1"
                                         class="w-full h-full object-cover"></div>
                         <div class="aspect-square" style="--r: 1; --c: 7;"><img src="./assets/2.jpg" alt="Image 2"
